Fixed not being able to select usernames in the user list.
Fixed userlist overflowing terribly.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -118,6 +118,8 @@ Body Area
   /*background-color:$lay;
   Trying a solid-$bg background :) */
   border: 1px solid #f3f3f3;
+  position: relative;
+  z-index: 100;
   overflow: auto;
   /*font-family: monospace;*/
   box-sizing: border-box;
@@ -129,9 +131,10 @@ Body Area
 
 #nameList {
   position: absolute;
+  top: 0px;
   right: 0px;
-  z-index: -1;
   height: 100%;
+  overflow: auto;
   border: 1px solid #f3f3f3;
   border-left: 0px;
   box-sizing: border-box;
